--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -59,7 +58,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-right: 5px;
+    padding-right: 10px;
 }
 .story>p{
     color:#262626;
@@ -78,6 +77,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.stories-image1
+{
+    background-image: url("./story/Frame.svg");
+    width: 66px;
+    height: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.story>.stories-image1>img{
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
 }
 .story>.stories-image>img{
     width: 56px;
@@ -204,9 +218,10 @@ line-height: 18px;
 }
 #footer_links>a{
 color:#c7c7c7;
-font-size: 12px;
+font-size: 10px;
 line-height: 16px;
 text-decoration: none;
+margin-right: 5;
 }
 
 #footer_copyright{
@@ -220,7 +235,7 @@ text-decoration: none;
 .post{
     width: 460px;
     margin-left: 10%;
-    margin-top: 32px;
+    margin-top: 16px;
 }
 
 .post_header{
@@ -243,6 +258,20 @@ text-decoration: none;
     justify-content: center;
     align-items: center;
 
+}
+.user_image1{
+    width: 45px;
+    height: 45px;
+    background-size: 100% 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.user_image1>img{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
 }
 .user_image>img{
     width: 35px;
@@ -327,11 +356,63 @@ text-decoration: none;
     line-height: 18px;
 }
 
+.post>.post_footer>#footer_suggestions>.see{
+    color: #0095F6;
+    font-size: 14px;
+    line-height: 16px;
+    text-decoration: none;
+}
+
+.box{
+    margin-left: 12px;
+    width:176px;
+    height: 200px;
+    border: 1px solid #dbdbdb;
+    border-radius: 4px;
+}
+.box>.pro>img{
+    width: 54px;
+    height: 54px;
+    border-radius: 50px;
+}
+.box>.des{
+    text-align: center;
+    margin: 10px;
+    margin-top: 0px;
+}
+.box>.des>p{
+    color:#BeBeBe;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 16px;
+}
+.box>.des>h4{
+    color:#262626;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 18px;
+}
+.box>div>button{
+    width:82px;
+    height: 32px;
+    border-radius: 8px;
+    border: none;
+    background-color: #0095F6;
+    color: white;
+}
+ 
 @media screen and (max-width:1102px){
+    #sidebar { width: 20%;}
     footer{
         display: none;
     }
     .post{
         margin-left: 5%;
+    }
+}
+
+@media (max-width: 728px) {
+    #sidebar{
+        display: none;
     }
 }
